--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -17,8 +17,10 @@
     <h1>Olá, mundo!</h1>
     <p>Já me livrei da maldição.</p>
     <script>
-        var nome = window.prompt('Qual é o seu nome?') // Perguntar seu nome...
-        window.alert('É um prazer em te conhecer, ' + nome + '!') // Concatenação
+        var n1 = Number(window.prompt('Digite um número: '))
+        var n2 = Number(window.prompt('Digite outro número: '))
+        var soma = n1 + n2
+        window.alert('A soma dos valores é: ' + soma)
     </script>
 </body>
 </html>
