--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -14,7 +14,8 @@
     
     <script>
         var nome = window.prompt('Seu nome: ')
-        document.write(`Seu nome tem ${nome.length} letras.`) // quantas letras tem no nome
+        document.write(`Olá, ${nome}! Seu nome tem ${nome.length} letras. <br>`) // quantas letras tem no nome
+        document.write(`Seu nome em maiúsculas é ${nome.toUpperCase()}.`)
     </script>
 </body>
 </html>
