--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -15,7 +15,8 @@
     <script>
         var nome = window.prompt('Seu nome: ')
         document.write(`Olá, ${nome}! Seu nome tem ${nome.length} letras. <br>`) // quantas letras tem no nome
-        document.write(`Seu nome em maiúsculas é ${nome.toUpperCase()}.`)
+        document.write(`Seu nome em maiúsculas é ${nome.toUpperCase()}. <br>`)
+        document.write(`Seu nome em minúsculas é ${nome.toLowerCase()}.`)
     </script>
 </body>
 </html>
